--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,5 +1,58 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,700,800,900&display=swap');
 
 body {
+  min-height: 100vh;
+  background: #F7FAFC;
   font-family: Nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
+body .home .hero h1 {
+  font-weight: 700;
+}
+
+body .home .hero .description {
+  max-width: 35rem;
+  font-size: 1.5rem;
+  line-height: 1.3;
+  color: #718096;
+  font-weight: 300;
+}
+
+body .home .feature h2 {
+  font-weight 700;
+}
+
+body .navbar {
+  border-bottom: none;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .07);
+}
+
+body .navbar .nav-links a {
+  font-weight 700
+}
+
+.sidebar {
+  background: #F7FAFC
+}
+
+.sidebar-heading {
+  font-weight 800;
+}
+
+a.sidebar-link.active {
+  font-weight 700;
+}
+
+.content:not(.custom) > h1, .content:not(.custom) > h2, .content:not(.custom) > h3, .content:not(.custom) > h4, .content:not(.custom) > h5, .content:not(.custom) > h6 {
+  margin-top: -3.1rem;
+  padding-top: 5.9rem;
+  margin-bottom: 0;
+}
+
+body .navbar .site-name {
+  font-weight 700;
+}
+
+body .home {
+  padding-top 6rem;
 }
